--- a/quickstart.html
+++ b/quickstart.html
@@ -63,7 +63,6 @@
 
 
     <div class="document">
-    
       <div class="documentwrapper">
         <div class="bodywrapper">
           <div class="body">
@@ -289,12 +288,27 @@ overriden by the local <tt class="docutils literal"><span class="pre">ino.ini</s
           </div>
         </div>
       </div>
-
       <div class="clearer"></div>
     </div>
+    
     <div class="footer">
         &copy; Copyright 2011, Amperka Team.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.
     </div>
+    <!-- Yandex.Metrika counter -->
+    <div style="display:none;"><script type="text/javascript">
+    (function(w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter10625653 = new Ya.Metrika({id:10625653, enableAll: true});
+            }
+            catch(e) { }
+        });
+    })(window, "yandex_metrika_callbacks");
+    </script></div>
+    <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+    <noscript><div><img src="//mc.yandex.ru/watch/10625653" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
   </body>
 </html>
