--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ generated automatically and you&#8217;ll never see them if you don&#8217;t want 
 <li>Out-of-source builds. Directories with source files are not
 cluttered with intermediate object files.</li>
 <li>Support for <tt class="docutils literal"><span class="pre">*.pde</span></tt> and <tt class="docutils literal"><span class="pre">*.ino</span></tt> sketches as well as
-raw <tt class="docutils literal"><span class="pre">*.c</span></tt> and <tt class="docutils literal"><span class="pre">*cpp</span></tt>.</li>
+raw <tt class="docutils literal"><span class="pre">*.c</span></tt> and <tt class="docutils literal"><span class="pre">*.cpp</span></tt>.</li>
 <li>Automatic dependency tracking. Referred libraries are automatically
 included in the build process. Changes in <tt class="docutils literal"><span class="pre">*.h</span></tt> files lead
 to recompilation of sources which include them.</li>
