--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Ino &mdash; Ino 0.1 documentation</title>
+    <title>Ino &mdash; Ino 0.2 documentation</title>
     
     <link rel="stylesheet" href="_static/basic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.1',
+        VERSION:     '0.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="Ino 0.1 documentation" href="#" />
+    <link rel="top" title="Ino 0.2 documentation" href="#" />
 <link rel="stylesheet" type="text/css" href="_static/ino.css">
 <link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Andada' rel='stylesheet' type='text/css'>
@@ -88,8 +88,9 @@ generated automatically and you&#8217;ll never see them if you don&#8217;t want 
 <li>Simple. No build scripts are necessary.</li>
 <li>Out-of-source builds. Directories with source files are not
 cluttered with intermediate object files.</li>
-<li>Support for <tt class="docutils literal"><span class="pre">*.pde</span></tt> and <tt class="docutils literal"><span class="pre">*.ino</span></tt> sketches as well as
+<li>Support for <tt class="docutils literal"><span class="pre">*.ino</span></tt> and <tt class="docutils literal"><span class="pre">*.pde</span></tt> sketches as well as
 raw <tt class="docutils literal"><span class="pre">*.c</span></tt> and <tt class="docutils literal"><span class="pre">*.cpp</span></tt>.</li>
+<li>Support for Arduino Software versions 1.x as well as 0.x.</li>
 <li>Automatic dependency tracking. Referred libraries are automatically
 included in the build process. Changes in <tt class="docutils literal"><span class="pre">*.h</span></tt> files lead
 to recompilation of sources which include them.</li>
@@ -133,8 +134,6 @@ path, etc just once.</li>
 with other platform users in mind, so it will eventually get
 cross-platform support. Help from Windows- and MacOS- developers is
 much appreciated.</li>
-<li>Ino is not yet well tested with release candidate of upcoming Arduino 1.0
-software. Although it should be compatible.</li>
 </ul>
 </div>
 <div class="section" id="getting-help">
