--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ path pointing to the sketch origin while compiling processed source.</li>
 dependencies are found on the same line. Now all of them are taken into
 account, not just first one.</li>
 <li>Add: Processed sketch files now have #line directive so that they appear
-as original source in GCC in case of syntax errors.</li>
+as original source in GCC output in case of syntax errors.</li>
 <li>Add: Automatic dependency tracking for included header files. Now a
 sketch or cpp source get rebuild once an included (directly or
 indirectly) header changes.</li>
